--- a/portafolio-es/index.html
+++ b/portafolio-es/index.html
@@ -115,7 +115,7 @@
 
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="https://nicolastrejos42.github.io/portafolio_practica/Clase%2025%20(media%20queries)/perfil.html"
+                        <a href="https://nicolastrejos42.github.io/portafolio_practica/Clase%2025%20(media%20queries)/index.html"
                             target="_blank"><img src="img/proyectos/portafolio.png" alt=""></a>
                     </div>
                     <div class="info">
