--- a/portafolio-es/index.html
+++ b/portafolio-es/index.html
@@ -133,6 +133,7 @@
                     </div>
                     <div class="info">
                         <h4>Sustentación</h4>
+                        <h5>Sustentación proyecto hecho para una farmacia.</h5>
                     </div>
                 </div>
         </section>
