--- a/portafolio-es/index.html
+++ b/portafolio-es/index.html
@@ -136,6 +136,17 @@
                         <h5>Sustentación proyecto hecho para una farmacia.</h5>
                     </div>
                 </div>
+
+                <div class="proyecto">
+                    <div class="foto">
+                        <a href="https://nicolastrejos42.github.io/freelancer/"
+                            target="_blank"><img src="img/proyectos/freelancer.png" alt=""></a>
+                    </div>
+                    <div class="info">
+                        <h4>Freelancer</h4>
+                        <h5>Página de un freelancer.</h5>
+                    </div>
+                </div>
         </section>
         <p >Nota: Muchos proyectos fueron hechos para empresas, no los puedo mostrar por
             obvias razones ;) si te gustaría ver las plantillas, contáctate conmigo 😊 (final de la página) </p>
