Actualización proyecto freelancer.
Se agregaron las tecnologías utilizadas en el proyecto de freelancer.

--- a/portafolio-es/index.html
+++ b/portafolio-es/index.html
@@ -144,7 +144,8 @@
                     </div>
                     <div class="info">
                         <h4>Freelancer</h4>
-                        <h5>Página de un freelancer.</h5>
+                        <h5>Tecnologías utilizadas:</h5>
+                        <p><span class="html">HTML5</span> - <span class="css">CSS3</span></p>
                     </div>
                 </div>
         </section>
