--- a/portafolio-es/index.html
+++ b/portafolio-es/index.html
@@ -16,8 +16,8 @@
     <meta name="keywords" content="Desarrollador web, diseñador, desarrollador full-stack">
     <meta name="author" content="Nicolás Trejos">
 
-    <title>Nicolas Trejos | Desarrollador JR</title>
-
+    <title>Nicolás Trejos | Desarrollador JR</title>
+    <link rel="icon" type="image/png" href="img/Web/icons8-código-flat-96.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower&display=swap" rel="stylesheet">
