--- a/portafolio-es/index.html
+++ b/portafolio-es/index.html
@@ -148,6 +148,18 @@
                         <p><span class="html">HTML5</span> - <span class="css">CSS3</span></p>
                     </div>
                 </div>
+
+                <div class="proyecto">
+                    <div class="foto">
+                        <a href="https://nicolastrejos42.github.io/frontend_store/"
+                            target="_blank"><img src="img/proyectos/store.png" alt=""></a>
+                    </div>
+                    <div class="info">
+                        <h4>Frontend Store</h4>
+                        <h5>Tecnologías utilizadas:</h5>
+                        <p><span class="html">HTML5</span> - <span class="css">CSS3</span></p>
+                    </div>
+                </div>
         </section>
         <p >Nota: Muchos proyectos fueron hechos para empresas, no los puedo mostrar por
             obvias razones ;) si te gustaría ver las plantillas, contáctate conmigo 😊 (final de la página) </p>
