Actualización de index.html
Se quitó el proyecto de sustentación y se agregó el proyecto de blog de café.

--- a/portafolio-es/index.html
+++ b/portafolio-es/index.html
@@ -128,17 +128,6 @@
 
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="https://www.canva.com/design/DAFG4WMM_tE/KrnWi4y4FLACnBmnj0_Q3A/watch?utm_content=DAFG4WMM_tE&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink"
-                            target="_blank"><img src="img/proyectos/sustentacion.png" alt=""></a>
-                    </div>
-                    <div class="info">
-                        <h4>Sustentación</h4>
-                        <h5>Sustentación proyecto hecho para una farmacia.</h5>
-                    </div>
-                </div>
-
-                <div class="proyecto">
-                    <div class="foto">
                         <a href="https://nicolastrejos42.github.io/freelancer/"
                             target="_blank"><img src="img/proyectos/freelancer.png" alt=""></a>
                     </div>
@@ -160,6 +149,19 @@
                         <p><span class="html">HTML5</span> - <span class="css">CSS3</span></p>
                     </div>
                 </div>
+
+                <div class="proyecto">
+                    <div class="foto">
+                        <a href="https://nicolastrejos42.github.io/blogCafe/"
+                            target="_blank"><img src="img/proyectos/cafe.png" alt=""></a>
+                    </div>
+                    <div class="info">
+                        <h4>Blog de Café</h4>
+                        <h5>Tecnologías utilizadas:</h5>
+                        <p><span class="html">HTML5</span> - <span class="css">CSS3</span></p>
+                    </div>
+                </div>
+                
         </section>
         <p >Nota: Muchos proyectos fueron hechos para empresas, no los puedo mostrar por
             obvias razones ;) si te gustaría ver las plantillas, contáctate conmigo 😊 (final de la página) </p>
